[package]
name = "gdi_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "*"
features = ["Win32_Graphics_Gdi", "Win32_Foundation"]

[dev-dependencies]
font_decoder = {git = "https://github.com/hzuika/font_decoder"}